--- a/src/index.css
+++ b/src/index.css
@@ -235,6 +235,17 @@ button {
   font-weight: 500;
 }
 
+.delete {
+  gap: 0.4rem;
+}
+
+.delete span {
+  color: hsl(358, 79%, 66%);
+  margin-left: auto;
+  font-size: 1rem;
+  font-weight: 500;
+}
+
 @media screen and (min-width: 600px) {
   .comment-card {
     display: flex;
@@ -242,10 +253,12 @@ button {
     padding: 0.5rem;
     position: relative;
   }
-  .reply {
+  .btn-reposnse {
     position: absolute;
     top: 30px;
     right: 20px;
+    display: flex;
+    gap: 1rem;
   }
 
   footer {
@@ -389,4 +402,11 @@ button:hover path {
   background-color: var(--clr-dark-blue);
 }
 
+.delete:hover path {
+  fill: hsl(358, 79%, 80%);
+}
+
+.delete:hover span {
+  color: hsl(358, 79%, 80%);
+}
 /* button hover effect */
