--- a/src/index.css
+++ b/src/index.css
@@ -164,8 +164,10 @@ button {
 .comment-card header {
   display: flex;
   align-items: center;
+  /* background-color: red; */
 
   padding: 1rem;
+
   gap: 1rem;
 }
 .avatar {
@@ -245,7 +247,10 @@ button {
   font-size: 1rem;
   font-weight: 500;
 }
-
+.btn-reposnse {
+  display: flex;
+  gap: 1rem;
+}
 @media screen and (min-width: 600px) {
   .comment-card {
     display: flex;
@@ -371,10 +376,12 @@ button {
 .comment-card-wrapper-forReply {
   width: 100%;
 }
+.comment-card-header {
+  padding-left: 0;
+}
 
 .layerTwo {
-  /* background-color: gold; */
-  width: 88%;
+  width: 94%;
   margin: 1rem 0 0 auto;
 }
 
@@ -384,7 +391,23 @@ button {
   height: 100%;
   background-color: var(--clr-light-gray);
   position: absolute;
-  left: 6%;
+  left: 0%;
+}
+
+@media screen and (min-width: 600px) {
+  .layerTwo {
+    /* background-color: gold; */
+    width: 88%;
+  }
+
+  .wrapper-layerTwo::before {
+    content: "";
+    width: 2px;
+    height: 100%;
+    background-color: var(--clr-light-gray);
+    position: absolute;
+    left: 6%;
+  }
 }
 
 /* laterTwo */
@@ -431,4 +454,62 @@ pre {
   white-space: -pre-wrap; /* Opera 4-6 */
   white-space: -o-pre-wrap; /* Opera 7 */
   word-wrap: break-word; /* Internet Explorer 5.5+ */
+}
+
+fieldset {
+  display: none;
+}
+
+.showAPI {
+  display: block;
+}
+
+.btn-showAPI {
+  display: block;
+  margin: 1rem auto;
+  background-color: hsl(200, 100%, 50%);
+  padding: 1em;
+  /* background-color: transparent; */
+  border: none;
+  color: white;
+  transition: all 0.2s linear;
+  font-size: 2rem;
+}
+
+.btn-showAPI:hover {
+  background-color: hsl(200, 100%, 70%);
+}
+
+.textarea-edit {
+  resize: none;
+  width: 96.5%;
+  padding: 0.7rem 1.4rem;
+  font-size: 1rem;
+  margin: auto;
+
+  font-family: inherit;
+  border-radius: 10px;
+}
+
+.btn-update button {
+  background-color: var(--clr-moderate-blue);
+  color: white;
+  border: none;
+  padding: 0.8em 2em;
+  border-radius: 10px;
+  font-family: inherit;
+  font-size: 1rem;
+  font-weight: 500;
+  display: inline-block;
+  margin-left: auto;
+}
+
+.btn-update {
+  text-align: right;
+  padding: 1rem;
+  display: none;
+}
+
+.btn-update-show {
+  display: block;
 }
